# gpt-4o-mini-with-RAG-using-KMMLU-TestSet

./: .env.example  .gitignore  Dockerfile  agent.py  batch_output.jsonl  docker-compose.yml  evaluation.py  get_index.py  pyproject.toml  readme.md  run.sh
data/: get_criminal_kmmlu.py
data/corpus/: get_law_json.py  json_to_csv.py  law_list.csv
data/corpus/law_json/: data_0.json  data_1.json  data_10.json  data_100.json  data_1000.json  data_1001.json  data_1002.json  data_1003.json  data_1004.json  data_1005.json  data_1006.json  data_1007.json  data_1008.json  data_1009.json  data_101.json  data_1010.json  data_1011.json  data_1012.json  data_1013.json  data_1014.json  data_1015.json  data_1016.json  data_1017.json  data_1018.json  data_1019.json  data_102.json  data_1020.json  data_1021.json  data_1022.json  data_1023.json  data_1024.json  data_1025.json  data_1026.json  data_1027.json  data_1028.json  data_1029.json  data_103.json  data_1030.json  data_1031.json  data_1032.json  (+1643 more)
